--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.9",
-    "validator": "^13.15.0"
+    "validator": "^13.15.15"
   }
 }
